# canchitas_bot

./: .flake8  .gitignore  Makefile  main.py  pyproject.toml  requirements.txt  settings.py  text_utils.py
tests/: test_text_utils.py
