[tool.poetry]
name = "canchitas-bot"
version = "0.1.0"
description = ""
authors = ["Jordi Loyzaga <jordi@loyzaga.net>, Stefano Molina <stefanom16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"
silabeador = "^1.1.11.post6"

[tool.poetry.scripts]
bot = "canchitas_bot:main"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
